# student-cli-tools

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ackage-on-release.yaml  package-on-release.yaml
src/student_cli_tool/: cli.py
